--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target"                    : "ES6",
-    "module"                    : "CommonJS",
-    "outDir"                    : "./dist",
-    "rootDir"                   : "./src",
-    "strict"                    : true,
-    "esModuleInterop"           : true,
-    "experimentalDecorators"    : true,
-    "emitDecoratorMetadata"     : true,
+    "target"                              : "ES6",
+    "module"                              : "CommonJS",
+    "outDir"                              : "./dist",
+    "rootDir"                             : "./src",
+    "strict"                              : true,
+    "esModuleInterop"                     : true,
+    "experimentalDecorators"              : true,
+    "emitDecoratorMetadata"               : true,
+    "forceConsistentCasingInFileNames"    : true
   }
 }
